--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,17 @@ Copyright (c) 2015 Daniel Eden
   }
 }
 
+@keyframes blurIn {
+  0% {
+    opacity: 1;
+    filter: blur(20px);
+  }
+  100% {
+    opacity: 1;
+    filter: blur(0px);
+  }
+}
+
 @keyframes fadeInUp {
   0% {
     opacity: 0;
@@ -898,6 +909,7 @@ footer a {
 
 .main .inner .img {
   width: 400px;
+  animation: blurIn 1.5s;
 }
 
 @media screen and (max-width: 768px) {
