--- a/src/include/_header.pug
+++ b/src/include/_header.pug
@@ -19,11 +19,11 @@ header
             a(href='/#ACCESS')  ACCESS
         ul.menu1
           li.link-lang
-            a(href='#a')  Japanese  
+            a(href='/')  Japanese  
             |
             span  /
             |
-            a(href='#a')  English
+            a(href='/en/')  English
 
           li.contact
             a(href='mailto:inquirly@theoria.ne.jp')  CONTACT  
