--- a/src/include/_p-hd.pug
+++ b/src/include/_p-hd.pug
@@ -12,7 +12,7 @@ head
   meta(property='og:description', content=`テオリアコミュニケーションズは、ビジネスと顧客をつなぐコミュニケーションをデザインします。`)
   meta(property='og:type', content='wesite')
   meta(property='og:url', content=`https://www.theoria.ne.jp`)
-  link(href='/assets/css/style.css', rel='stylesheet', type='text/css', media='all')
+  link(href='/assets/css/style.css?20181113', rel='stylesheet', type='text/css', media='all')
   script(type='text/javascript', src='/assets/js/plugin.js')
   script(type='text/javascript', src='/assets/js/script.js')
   
