--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -46,6 +46,9 @@
     padding:0.2em  0 1em;
     font-weight: bold;
     letter-spacing: 0.2em;
+    &.en{
+      letter-spacing: 0;
+    }
     @include mq{
       padding:0.6em  0 1em;
       letter-spacing: 0px;
