--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -58,6 +58,9 @@ section{
     padding: 0 0 10vw 0;
   }
 }
+.depart {
+  font-size: 1.1rem !important;
+}
 //コンテンツ毎
 @import "header";
 @import "footer";
