--- a/src/include/_sec3.pug
+++ b/src/include/_sec3.pug
@@ -62,4 +62,4 @@
   p.other 国内外ブランドを問わず多数の実績があります。
     br
     |
-    a(href="#") 実績集ダウンロード（PDFファイル）
+    a(href="works.pdf" target="_blank") 実績集ダウンロード（.pdfファイル 23.4MB）
