--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,7 +585,7 @@ section.is-show .title1 {
 }
 
 .depart {
-  font-size: 1.1rem !important;
+  font-size: 1.2rem !important;
 }
 
 header {
@@ -1038,6 +1038,7 @@ footer a {
 .sec1 {
   background: #00579d;
   text-align: center;
+  border-bottom: 1px solid #FFF;
 }
 
 .sec1 .logobox {
